# -test

AI早报/: .env.example  .gitignore  README.md  pyproject.toml
AI早报/.github/ISSUE_TEMPLATE/: daily_report.yml  source_feedback.yml
AI早报/.github/workflows/: fetch_candidates.yml  generate_cards.yml  generate_draft.yml  generate_video.yml  publish_site.yml  smoke_test.yml
AI早报/BACKUP/: issue_1.md
AI早报/config/: categories.yaml  settings.toml  sources.yaml
AI早报/config/prompts/: classify.txt  draft_issue.txt  summarize.txt
AI早报/data/: ai_daily.db
AI早报/data/staging/: draft_2026-04-16.md
AI早报/docs/: AI早报MVP开发规划.md  Prompt策略.md  信源清单.md  发布流程SOP.md
AI早报/scripts/: bootstrap.sh  export_issue_backup.sh  run_daily.sh
AI早报/services/: README.md
AI早报/services/card-renderer/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  smoke-request.json
AI早报/services/video-maker/: README.md  video_maker.py
AI早报/services/video-maker/examples/: timeline.sample.json
AI早报/site/templates/: index.html.j2
AI早报/src/ai_daily/: __init__.py  cli.py  config.py
AI早报/src/ai_daily/export/: __init__.py  card.py  video.py
AI早报/src/ai_daily/fetchers/: __init__.py  adapter.py  arxiv.py  base.py  factory.py  github.py  rss.py  web.py
AI早报/src/ai_daily/llm/: __init__.py  client.py  editor.py  summarizer.py
AI早报/src/ai_daily/models/: __init__.py  article.py  issue.py  publication.py  source.py
AI早报/tests/: test_assets.py  test_db.py  test_draft.py  test_llm.py  test_pipeline.py  test_publish.py  test_render_markdown.py  test_sources.py
(+39 files in other folders)
