[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ai-daily"
version = "0.1.0"
description = "AI daily briefing pipeline skeleton."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.13.4,<5",
  "feedgen>=1.0.0,<2",
  "feedparser>=6.0.11,<7",
  "httpx>=0.28.1,<1",
  "jinja2>=3.1.6,<4",
  "markdown>=3.8,<4",
  "pydantic>=2.11.0,<3",
  "PyGithub>=2.6.1,<3",
  "PyYAML>=6.0.2,<7",
  "trafilatura>=2.0.0,<3",
  "typer>=0.16.0,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5,<9",
  "ruff>=0.11.6,<1",
]

[project.scripts]
ai-daily = "ai_daily.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_daily"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
